add build for ruby 2.7

--- a/.circleci/config.yml.erb
+++ b/.circleci/config.yml.erb
@@ -1,7 +1,7 @@
 # To update the build configuration, edit the "builds" array below and run:
 # erb .circleci/config.yml.erb > .circleci/config.yml
 <%
-  builds = %w(2.4 2.5 2.6)
+  builds = %w(2.4 2.5 2.6 2.7)
 %>
 version: 2
 jobs:
